2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13068]
	* elf/dl-misc.c (_dl_sysdep_read_whole_file): Use O_CLOEXEC.

2011-07-20  Liubov Dmitrieva  <liubov.dmitrieva@intel.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	strchr-sse2 strrchr-sse2 strchr-sse2-bsf
	strrchr-sse2-bsf
	* sysdeps/i386/i686/multiarch/strchr.S: New file.
	* sysdeps/i386/i686/multiarch/strrchr.S: New file.
	* sysdeps/i386/i686/multiarch/strchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/strchr-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/strrchr-sse2.S: New file.
	* sysdeps/i386/i686/multiarch/strrchr-sse2-bsf.S: New file.

2011-08-29  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/x86_64/wcscmp.S: New file.

	* sysdeps/i386/i686/multiarch/Makefile: (sysdep_routines): Add
	wcscmp-c wcscmp-sse2
	* sysdeps/i386/i686/multiarch/wcscmp-c.c: New file.
	* sysdeps/i386/i686/multiarch/wcscmp.S: New file.
	* sysdeps/i386/i686/multiarch/wcscmp-sse2.S: New file.
	* wcsmbs/wcscmp.c: Allow renaming.

2011-09-05  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/fpu/s_fabsf.S: Use first argument
	stack slot, rather than the struct return pointer slot.
	* sysdeps/sparc/sparc32/fpu/s_fabs.c: Delete.
	* sysdeps/sparc/sparc32/fpu/s_fabs.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_fabs.S: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sparcv9/fpu/Implies: Likewise.

2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	* po/ja.po: Update from translation team.

	[BZ #13144]
	* sysdeps/unix/sysv/linux/x86_64/bits/sem.h (semdid_ds): Fix to match
	kernel in 64-bit binaries.

2011-09-01  David S. Miller  <davem@davemloft.net>

	* elf/elf.h (HWCAP_SPARC_*): Move to..
	* sysdeps/sparc/sysdep.h: this new file and add new values.
	* sysdeps/unix/sparc/sysdep.h: Include sysdeps/sparc/sysdep.h
	* sysdeps/sparc/dl-procinfo.h: Include sysdep.h and increase
	_DL_HWCAP_COUNT to 24.
	* sysdeps/sparc/dl-procinfo.c (_dl_sparc_cap_flags): Add new