@@ -1,4 +1,4 @@
-/* Copyright (C) 1991,1992,1995-1998,2000,2001,2004,2010
+/* Copyright (C) 1991,1992,1995-1998,2000,2001,2004,2010,2011
    Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
@@ -26,17 +26,9 @@ __BEGIN_DECLS
 
 /* We need `size_t' for the following definitions.  */
 #ifndef __size_t
-# if defined __GNUC__ && __GNUC__ >= 2
 typedef __SIZE_TYPE__ __size_t;
-#  if defined __USE_XOPEN || __USE_XOPEN2K8
+# if defined __USE_XOPEN || __USE_XOPEN2K8
 typedef __SIZE_TYPE__ size_t;
-#  endif
-# else
-#  include <stddef.h>
-#  ifndef __size_t
-#   define __size_t size_t
-#  endif
-# endif
 #else
 /* The GNU CC stddef.h version defines __size_t as empty.  We need a real
    definition.  */
@@ -143,11 +135,6 @@ typedef struct
   } glob64_t;
 #endif
 
-#if __USE_FILE_OFFSET64 && __GNUC__ < 2
-# define glob glob64
-# define globfree globfree64
-#endif
-
 /* Do glob searching for PATTERN, placing results in PGLOB.
    The bits defined above may be set in FLAGS.
    If a directory cannot be opened or read and ERRFUNC is not nil,
@@ -156,7 +143,7 @@ typedef struct
    `glob' returns GLOB_ABEND; if it returns zero, the error is ignored.
    If memory cannot be allocated for PGLOB, GLOB_NOSPACE is returned.
    Otherwise, `glob' returns zero.  */
-#if !defined __USE_FILE_OFFSET64 || __GNUC__ < 2
+#if !defined __USE_FILE_OFFSET64
 extern int glob (__const char *__restrict __pattern, int __flags,
 		 int (*__errfunc) (__const char *, int),
 		 glob_t *__restrict __pglob) __THROW;
